# TraadingSimulator

./: CMakeLists.txt  main.cpp
assets/: users.txt
src/engine/: trading_engine.h
src/graph/: graph_plotter.h
src/integration/: api.cpp  api.h
src/portfolio/: portfolio.cpp  portfolio.h
src/ui/: ui+manager.h
src/user/: user_profile.h
